--- a/style.css
+++ b/style.css
@@ -4,6 +4,39 @@ table{
     font-family: 'Righteous', cursive;
     
 }
+@media screen and (min-width: 37.5em){
+.colm {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+}
+
+@media screen and (min-width: 48em){
+.img {
+    display: grid;
+    grid-template-columns: 1fr 1fr  ;
+    grid-gap: 15px;
+    margin-top: 15px;
+}
+}
+
+@media screen and (min-width: 37.5em){
+.img {
+    display: grid;
+    grid-template-columns:  1fr ;
+    grid-gap: 15px;
+    margin-top: 15px;
+}
+}
+.img {
+    display: grid;
+    grid-template-columns:  1fr 1fr 1fr;
+    grid-gap: 15px;
+    margin-top: 15px;
+}
+
+
+
 thead tr{
     background-image: linear-gradient(#6acf6a, #57b50a);
     color: gold;
@@ -48,6 +81,15 @@ body{
 fieldset{
     color: white
 }
+.colm {
+    display: grid;
+
+}
+h2{
+    font-family: 'Righteous', cursive;
+    color: white
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 @media screen and (max-width: 600px) {
     table thead {
